# untitled-rpg

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  meson.build
.github/workflows/: cmake-multi-platform.yml
assets/models/textures/: BAK_LEG.TXT
assets/sound-effects/statue/: credits.txt
assets/sound_effects/chandelier/: credits.txt
assets/sound_effects/crow/: credits.txt
assets/sprites/entities/banner/: credits.txt
assets/sprites/entities/candles/: credits.txt
assets/sprites/entities/chalice/: credits.txt
assets/sprites/entities/chandelier/: credits.txt
assets/sprites/entities/crow/: credits.txt
assets/sprites/entities/nature/: credits.txt
assets/sprites/entities/pots/: credits.txt
assets/sprites/entities/sheep/: credits.txt
assets/sprites/entities/statues/: credits.txt
modules/: CMakeLists.txt
src/: .clang-tidy  CMakeLists.txt  common.h  dictionary.c  dictionary.h  main.c  map_parser.y  map_scanner.l  resource.c  resource.h  resources.c  resources.h
src/map/: CMakeLists.txt  map.c  map.h  map_parser.c  map_parser.h  map_parser.y  map_scanner.c  map_scanner.h  map_scanner.l  obj.c  obj.h  vector3.h
tests/: CMakeLists.txt  test_dictionary.c  test_map_to_obj.c  test_obj.c  test_parser.c  test_scanner.c
